pricing_deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: pricing-deployment
spec:
  selector:
    matchLabels:
      app: pricing
  replicas: 1
  template:
    metadata:
      labels:
        app: pricing
    spec:
      containers:
      - name: pricing
        image: martcturvey/nginx-eks-test:latest
        ports:
        - containerPort: 80
