0-external_google.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing
spec:
  type: ExternalName
  externalName: www.play-hookey.com
