3-external_google.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing
spec:
  type: ClusterIP
  ports:
    - name: dummy-port
      port: 80
      protocol: TCP
