4-nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-eks
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
