5-pricing_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pricing
spec:
  hosts:
  - pricing
  http:
  - route:
    - destination:
        host: www.play-hookey.com
      weight: 50
    - destination:
        host: pricing-eks
      weight: 50
