full_test.yaml
kind: Service
apiVersion: v1
metadata:
  name: testsvc
spec:
  type: ClusterIP
  ports:
    - name: dummy-port
      port: 80
      protocol: TCP
  selector:
    app: dummy-selector
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: testsvc
spec:
  hosts:
  - google.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testsvc
spec:
  hosts:
  - testsvc
  http:
  - rewrite:
      authority: google.com
    route:
    - destination:
        host: google.com
    timeout: 60s
