nginx_vs_2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-route-2
spec:
  hosts:
  - nginx-service
  http:
  - route:
    - destination:
        host: google-ext
