pricing_external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: pricing-external
spec:
  hosts:
  - www.google.com
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: https
    protocol: TLS
  resolution: DNS
